--- a/ckanext/privatedatasets/templates_2.8/user/dashboard.html
+++ b/ckanext/privatedatasets/templates_2.8/user/dashboard.html
@@ -16,7 +16,7 @@
           {% link_for _('Edit settings'), named_route='user.edit', id=user.name, class_='btn btn-default', icon='cog' %}
         </div>
         <ul class="nav nav-tabs">
-          {{ h.build_nav_icon('dashboard.index', _('News feed')) }}
+          {{ h.build_nav_icon('activity.dashboard', _('News feed')) }}
           {{ h.build_nav_icon('dashboard.datasets', _('My Datasets')) }}
           {{ h.build_nav_icon('privatedatasets.acquired_datasets', _('Acquired Datasets')) }}
           {{ h.build_nav_icon('dashboard.organizations', _('My Organizations')) }}
